--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   flutter_vlc_player: ^7.2.0
   video_player: ^2.7.0
   chewie: ^1.7.0
+  http: ^0.13.6
+  media_kit: ^1.1.4+1
+  media_kit_video: ^1.1.5
+  media_kit_libs_ios_video: ^1.1.3
 
 dev_dependencies:
   flutter_test:
